[package]
name = "mnemosyne"
version = "0.1.7"
edition = "2024"

[dependencies]
clap = {version = "4.0", features = ["derive"]}
rusqlite = {version = "0.37.0", features = ["bundled"]}
chrono = "0.4"
cli-table = "0.5" 
tokio = { version = "1.48.0", features = ["full"] }
reqwest = { version = "0.12.28", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.146"
